move cloudwatch rights from unsupported to terraform and cloudformation scripts

--- a/cloudformation/cloudcraft-role.yaml
+++ b/cloudformation/cloudcraft-role.yaml
@@ -59,6 +59,11 @@ Resources:
                   - cloudfront:GetDistribution
                   - cloudfront:ListCloudFrontOriginAccessIdentities
                   - cloudfront:ListDistributions
+                  - cloudwatch:DescribeAlarmHistory
+                  - cloudwatch:DescribeAlarms
+                  - cloudwatch:DescribeAlarmsForMetric
+                  - cloudwatch:ListDashboards
+                  - cloudwatch:ListMetrics
                   - dynamodb:DescribeLimits
                   - dynamodb:DescribeReservedCapacity
                   - dynamodb:DescribeReservedCapacityOfferings
